--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 # 📊 Dio Investimentos
 
-Este repositório contém um descrição sobre uma planilha em Excel desenvolvida para ajudar no controle de investimentos em fundos imobiliários. A planilha permite registrar aportes, simular estimativas de quanto a pessoa teria daqui a 5, 10, 20 ou 30 anos, taxa de retorno, patrimônio, entre outros.
+Este repositório contém uma descrição e uma planilha em Excel desenvolvida para ajudar no controle de investimentos em fundos imobiliários. A planilha permite registrar aportes, simular estimativas de quanto a pessoa teria daqui a 5, 10, 20 ou 30 anos, taxa de retorno, patrimônio, entre outros.
 
 ## 📁 Conteúdo
 
@@ -29,7 +29,6 @@ Este repositório contém um descrição sobre uma planilha em Excel desenvolvid
 ## 🔒 Observações
 
 - A planilha foi criada com fórmulas compatíveis com Excel 2013 ou superior.
-- Nenhum dado pessoal é armazenado neste repositório.
 
 ## 📬 Contato
 
